# TuringMachine

./: CMakeLists.txt  Compiler.cpp  Compiler.h  DOCUMENTATION.md  GUI.cpp  GUI.h  MacrosForTuring.cpp  MacrosForTuring.h  Makefile  MemoryManager.cpp  MemoryManager.h  Program.txt  TuringMachine.cpp  TuringMachine.h  imgui.ini  main.cpp  readme.md  turing_machine
